crates/reifydb-testing/tests/testscript/errors/string_escape_hex_single.error
parse error at line 3 column 4 for "\"---\"":
---
   ^